# knot-hal-source

./: .gitignore  Makefile.am  configure.ac
include/: nrf24.h
src/: comm_nrf24l01.c
src/drivers/: Makefile.am  phy_driver.c  phy_driver_private.h  phy_driver_serial_linux.c  phy_driver_serial_linux.h
src/hal/comm/: comm_nrf24l01.c  comm_unix.c
src/hal/sec/: Makefile.am  sec_errors.h  security.c  security.h
src/hal/sec/nanoecc/: ecc.c  ecc.h
src/nrf24l01/: nrf24l01_ll.h
src/nrfd/: main.c  manager.c
tools/: Makefile  makekeys.c  testCrypto.c
